--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html, body {
-    height: 300px;
-    width: 500px;
+    max-height: 200px;
+    max-width: 550px;
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
