--- a/index.css
+++ b/index.css
@@ -67,17 +67,18 @@ button {
     display: flex;
     justify-content: space-evenly;
 }
+
 .password-field {
     display: table;
-    word-break: break-all;
     color: #10B981;
     margin: 0;
-    padding: 8px 18px 8px 18px;
     border-radius: 5px;
     font-style: Medium;
     font-size: 16px;
     text-align: center;
+    line-height: 40px;
+    height: 40px;
     width: 175px;
-    height: 20px;
     background-color: #2F3E53;
 }
+
